--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
+    "chart.js": "^2.7.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "http": "0.0.0",
     "morgan": "^1.9.0",
+    "ng2-charts": "^1.6.0",
     "path": "^0.12.7",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
